Set up facebook login
-facebook auth w/ passport
-moved server files to top level

--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@
 
   <!-- STYLESHEETS -->
   <link href="./css/jquery.mobile-unthemed.min.css" rel="stylesheet">
-   <link href="./css/jquery-ui.js" rel="stylesheet">
+   <link href="./css/jquery-ui.css" rel="stylesheet">
   <link href="./css/main.css" rel="stylesheet">
 
   <!-- SCRIPTS -->
@@ -75,7 +75,7 @@
           <input id="username" type="text" />
         <label for="password"></label>
           <input id="password" type="password" />
-
+        <a id="fb_button" href="#">Login with Facebook</a>
     </div>
     <div data-role="footer"></div>
   </div>
