--- a/app/index.html
+++ b/app/index.html
@@ -8,8 +8,11 @@
 
   <!-- STYLESHEETS -->
   <link href="./css/jquery.mobile-unthemed.min.css" rel="stylesheet">
-   <link href="./css/jquery-ui.css" rel="stylesheet">
+  <link href="./css/jquery-ui.css" rel="stylesheet">
   <link href="./css/main.css" rel="stylesheet">
+
+  <!-- favicon -->
+  <link rel="shortcut icon" href="./assets/greenscore.ico">
 
   <!-- SCRIPTS -->
   <!-- external scripts -->
