--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
   <!-- MVC scripts -->
   <!-- models -->
   <script src="./scripts/models/mapView.js" type="text/javascript"></script>
+  <script src="./scripts/models/login.js" type="text/javascript"></script>
   <!-- views -->
   <!-- controllers -->
   <script src="./scripts/controllers/queryZillow.js" type="text/javascript"></script>
@@ -44,7 +45,7 @@
   <script src="./scripts/controllers/mapHandler.js" type="text/javascript"></script>
 </head>
 <body>
-  <div data-role="page" data-fullscreen="true" id="landingPage">
+  <div data-role="page" data-url="home" data-fullscreen="true" id="landingPage">
     <div data-role="header">
       <div class="navBar">
         <h2 class="searchBtn">Search</h2>
@@ -61,7 +62,7 @@
   </div>
 
   <!-- The login screen -->
-  <div data-role="page" data-fullscreen="true" id="loginPage">
+  <div data-role="page" data-url="/loginPage" data-fullscreen="true" id="loginPage">
     <div data-role="header">
       <div class="navBar">
         <h2 class="searchBtn">Search</h2>
@@ -71,17 +72,20 @@
     </div>
     <div data-role="content" class="contentBubble">
         <h1>Green<span>score</span></h1>
-        <label for="username"></label>
-          <input id="username" type="text" />
-        <label for="password"></label>
-          <input id="password" type="password" />
+        <form id="login" action="/login" method="post">
+          <label for="username"></label>
+            <input id="username" name="username" type="text" />
+          <label for="password"></label>
+            <input id="password" name="password" type="password" />
+            <input id="login_button" type="submit" value="login" />
+        </form>
         <a id="fb_button" href="#">Login with Facebook</a>
     </div>
     <div data-role="footer"></div>
   </div>
 
   <!-- New User Page -->
-  <div data-role="page" data-fullscreen="true" id="newUserPage">
+  <div data-role="page" data-url="/register" data-fullscreen="true" id="newUserPage">
     <div data-role="header">
       <div class="navBar">
         <h2 class="searchBtn">Search</h2>
