adding filter button

--- a/app/index.html
+++ b/app/index.html
@@ -137,6 +137,11 @@
 
     <div data-role="content" class="contentBubble">
       <div id="map_canvas"></div>
+      <div id="filterOverlay">
+	<h2>
+	  Filter
+	</h2>
+      </div>
     </div>
     <div data-role="footer"></div>
   </div>
