--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>GreenScore</title>
+    <title>Greenscore</title>
 
     <!-- STYLESHEETS -->
     <link href="./css/reset.css" rel="stylesheet">
@@ -46,7 +46,8 @@
     <!-- controllers -->
     <script src="./scripts/controllers/mapController.js" type="text/javascript"></script>
     <script src="./scripts/controllers/filters.js" type="text/javascript"></script>
-    <script src="./scripts/controllers/queryZillow.js" type="text/javascript"></script>
+    <script src="./scripts/controllers/query.js" type="text/javascript"></script>
+    <script src="./scripts/controllers/load.js" type="text/javascript"></script>
     <script src="./scripts/controllers/app.js" type="text/javascript"></script>
     
   </head>
