adding usability tests and fixed navbar

--- a/app/index.html
+++ b/app/index.html
@@ -54,9 +54,10 @@
     <div data-role="page" data-url="home" data-fullscreen="true" id="landingPage">
       <div data-role="header">
         <div class="navBar">
-          <h2 class="searchBtn">Search</h2>
-          <h2 class="loginBtn">Login</h2>
-          <img src="./assets/selection.png"  style="right: 34%;"/>
+          <div class="navBtn filterBtn"><h2>Filter</h2></div>
+          <div class="navBtn mapBtn"><h2>Map</h2></div>
+          <div class="navBtn loginBtn"><h2>Login</h2></div>
+          <div class="navBtn searchBtn"><h2>Search</h2></div>
         </div>
       </div>
       <div data-role="content" class="contentBubble">
@@ -71,9 +72,10 @@
     <div data-role="page" data-url="/loginPage" data-fullscreen="true" id="loginPage">
       <div data-role="header">
         <div class="navBar">
-          <h2 class="searchBtn">Search</h2>
-          <h2>Login</h2>
-          <img src="./assets/selection.png"  style="right: 15%;"/>
+          <div class="navBtn filterBtn"><h2>Filter</h2></div>
+          <div class="navBtn mapBtn"><h2>Map</h2></div>
+          <div class="navBtn loginBtn"><h2>Login</h2></div>
+          <div class="navBtn searchBtn"><h2>Search</h2></div>
         </div>
       </div>
       <div data-role="content" class="contentBubble">
@@ -94,9 +96,10 @@
     <div data-role="page" data-url="/register" data-fullscreen="true" id="newUserPage">
       <div data-role="header">
         <div class="navBar">
-          <h2 class="searchBtn">Search</h2>
-          <h2>Profile</h2>
-          <img src="./assets/selection.png"  style="right: 15%;"/>
+          <div class="navBtn filterBtn"><h2>Filter</h2></div>
+          <div class="navBtn mapBtn"><h2>Map</h2></div>
+          <div class="navBtn profileBtn"><h2>Profile</h2></div>
+          <div class="navBtn searchBtn"><h2>Search</h2></div>
         </div>
       </div>
       <div data-role="content" class="contentBubble">
@@ -116,9 +119,10 @@
     <div data-role="page" data-fullscreen="true" id="profilePage">
       <div data-role="header">
         <div class="navBar">
-          <h2 class="searchBtn">Search</h2>
-          <h2>Profile</h2>
-          <img src="./assets/selection.png"  style="right: 15%;"/>
+          <div class="navBtn filterBtn"><h2>Filter</h2></div>
+          <div class="navBtn mapBtn"><h2>Map</h2></div>
+          <div class="navBtn profileBtn"><h2>Profile</h2></div>
+          <div class="navBtn searchBtn"><h2>Search</h2></div>
         </div>
       </div>
       <div data-role="content" class="contentBubble">
@@ -131,11 +135,10 @@
     <div data-role="page" data-fullscreen="true" id="mapView">
       <div data-role="header">
         <div class="navBar">
-          <h2 class="searchBtn">Search</h2>
-          <h2 class="profileBtn">Profile</h2>
-          <h2>Map</h2>
-          <h2 class="filterBtn">Filter</h2>
-          <img src="./assets/selection.png"  style="right: 14%;"/>
+          <div class="navBtn filterBtn"><h2>Filter</h2></div>
+          <div class="navBtn mapBtn"><h2>Map</h2></div>
+          <div class="navBtn loginBtn"><h2>Login</h2></div>
+          <div class="navBtn searchBtn"><h2>Search</h2></div>
         </div>
       </div>
 
@@ -154,11 +157,10 @@
     <div data-role="page" data-fullscreen="true" id="filterPage">
       <div data-role="header">
         <div class="navBar">
-          <h2 class="searchBtn">Search</h2>
-          <h2 class="profileBtn">Profile</h2>
-          <h2 class="mapBtn">Map</h2>
-          <h2>Filter</h2>
-          <img src="./assets/selection.png"  style="right: 15%;"/>
+          <div class="navBtn filterBtn"><h2>Filter</h2></div>
+          <div class="navBtn mapBtn"><h2>Map</h2></div>
+          <div class="navBtn loginBtn"><h2>Login</h2></div>
+          <div class="navBtn searchBtn"><h2>Search</h2></div>
         </div>
       </div>
       <div data-role="content" class="contentBubble">
