--- a/app/index.html
+++ b/app/index.html
@@ -29,8 +29,9 @@
     <script src="./scripts/lib/jquery.mobile-1.2.0.min.js" type="text/javascript"></script>
     <script src="./scripts/lib/jquery.watermark.min.js" type="text/javascript"></script>
 
-    <!-- backbone -->
-    <!--  <script src="./scripts/lib/backbone-min.js" type="text/javascript"></script> -->
+    <!-- crypto.js -->
+    <script src="./scripts/lib/sha256.js" type="text/javascript"></script>
+
     <!-- socket.io -->
     <script src="http://localhost:3000/socket.io/socket.io.js" type="text/javascript"></script>
 
