basics behind better tooltips on maps -have an idea for layout, just haven't had time to implement yet.

--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,9 @@
 
     <!-- SCRIPTS -->
     <!-- external scripts -->
+    <!-- to allow parent selector in css -->
+    <script src='./lib/jQuery.cssParentSelector.min.js' type='text/javascript'></script>
+
     <!-- Google Maps API -->
     <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHuRsJH37S3hiW7ig9SJBnCJQ_1H3Zf_w&sensor=false">
