--- a/app/index.html
+++ b/app/index.html
@@ -24,13 +24,15 @@
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHuRsJH37S3hiW7ig9SJBnCJQ_1H3Zf_w&sensor=false">
     </script>
 
-
     <!-- lib scripts -->
     <!-- jquery -->
     <script src="./scripts/lib/jquery-1.8.3.min.js" type="text/javascript"></script>
     <script src="./scripts/lib/jquery-ui.js" type="text/javascript"></script>
     <script src="./scripts/lib/jquery.mobile-1.2.0.min.js" type="text/javascript"></script>
     <script src="./scripts/lib/jquery.watermark.min.js" type="text/javascript"></script>
+
+    <!-- google maps infobubble -->
+    <script src="./scripts/lib/infobubble-compiled.js" type="text/javascript"></script>
 
     <!-- crypto.js -->
     <script src="./scripts/lib/sha256.js" type="text/javascript"></script>
