forgot to put back to localhost

--- a/app/index.html
+++ b/app/index.html
@@ -40,7 +40,7 @@
     <script src="./scripts/lib/sha256.js" type="text/javascript"></script>
 
     <!-- socket.io -->
-    <script id="socket" src="http://128.237.201.189:3000/socket.io/socket.io.js" type="text/javascript"></script>
+    <script id="socket" src="http://localhost:3000/socket.io/socket.io.js" type="text/javascript"></script>
 
     <!-- MVC scripts -->
     <!-- models -->
