Stores username in local storage

--- a/app/index.html
+++ b/app/index.html
@@ -107,7 +107,6 @@
           <input id="new_email" name="email" type="text" />
           <label for="address"></label>
           <input id="new_address" name="address" type="text" />
-
           <input id="register_button" type="button" value="Register" />
         </form>
       </div>
@@ -148,7 +147,7 @@
         </div>
       </div>
       <div data-role="content" class="contentBubble">
-        <h2>A users profile information</h2>
+        <h2 id="welcomeMessage">A users profile information</h2>
       </div>
       <div data-role="footer"></div>
     </div>
