css changes to landing page

--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,9 @@
         <h1>Green<span>score</span></h1>
         <label for="searchBar"></label>
         <input id="searchBar" type="text" />
-        <div id="queryBtn" class="button"><h2>Find Greenscore!</h2></div>
+        <div id="buttonWrapper">
+          <div id="queryBtn" data-role="button"><h2>Find Greenscore!</h2></div>
+        </div>
 
       </div>
       <div data-role="footer"></div>
@@ -211,7 +213,5 @@
       </div>
       <div data-role="footer"></div>
     </div>
-
-
   </body>
 </html>
