css nits. doesn't work yet

--- a/app/index.html
+++ b/app/index.html
@@ -95,7 +95,7 @@
           <input id="username" name="username" type="text" />
           <label for="password"></label>
           <input id="password" name="password" type="password" />
-          <input id="login_button" type="button" value="login" />
+          <input id="login_button" data-role="button" type="button" value="login" />
         </form>
         <a id="fb_button" href="#">Login with Facebook</a>
         <form id="register">
@@ -110,7 +110,7 @@
           <label for="address"></label>
           <input id="new_address" name="address" type="text" />
 
-          <input id="register_button" type="button" value="Register" />
+          <input id="register_button" data-role="button" type="button" value="Register" />
         </form>
       </div>
       <div data-role="footer"></div>
