--- a/app/index.html
+++ b/app/index.html
@@ -53,7 +53,6 @@
     <script src="./scripts/controllers/query.js" type="text/javascript"></script>
     <script src="./scripts/controllers/mapController.js" type="text/javascript"></script>
     <script src="./scripts/controllers/filters.js" type="text/javascript"></script>
-   
 
   </head>
   <body>
@@ -147,7 +146,40 @@
         </div>
       </div>
       <div data-role="content" class="contentBubble">
-        <h2 id="welcomeMessage">A users profile information</h2>
+        <h1 id="welcomeMessage">Hi there!</h1>
+        <p>This page contains information about you and your current
+        residence.</p>
+        <p>You can change this info to your heart's content by using the form
+        below!</p>
+        <br>
+        <!--<p>Why do we ask for your information? By gathering information about
+        your environmental practices, we can more accurately calculate your
+        greenscore. This will give other people a better idea of how
+        environmentally friendly your home is. We'll also tell you how your
+        habits measure up to those of your neighbors!</p>-->
+        <h2>Your info:</h2>
+        <p id="profileName">Name: Nick LaGrow</p>
+        <p id="profileUsername">Username: nickthegreat</p>
+        <p id="profileEmail">Email: nick@foo.com</p>
+        <p id="profileGreenscore">Greenscore: 7</p>
+        <br>
+        <h2>Your home:</h2>
+        <table id="profileTable">
+          <tr>
+            <th>Address</th>
+            <th>Baths</th>
+            <th>Beds</th>
+            <th>Square Footage</th>
+            <th>Solar?</th>
+          </tr>
+          <tr id="profileRow">
+            <td>123 Fake Street</td>
+            <td>1</td>
+            <td>2</td>
+            <td>400</td>
+            <td>No</td>
+          </tr>
+        </table>
       </div>
       <div data-role="footer"></div>
     </div>
