--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,6 @@
 
     <!-- SCRIPTS -->
     <!-- external scripts -->
-
     <!-- Google Maps API -->
     <script type="text/javascript"
             src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAHuRsJH37S3hiW7ig9SJBnCJQ_1H3Zf_w&sensor=false">
@@ -29,6 +28,9 @@
     <script src="./scripts/lib/jquery-ui.js" type="text/javascript"></script>
     <script src="./scripts/lib/jquery.mobile-1.2.0.min.js" type="text/javascript"></script>
     <script src="./scripts/lib/jquery.watermark.min.js" type="text/javascript"></script>
+
+    <!-- simple modal -->
+    <script src="./scripts/lib/jquery.simplemodal-1.4.3.js" type="text/javascript"></script>
 
     <!-- util -->
     <script src="./scripts/lib/Util.js" type="text/javascript"></script>
