better buttons errwhere brah

--- a/app/index.html
+++ b/app/index.html
@@ -79,7 +79,7 @@
         <h1>Green<span>score</span></h1>
         <label for="searchBar"></label>
         <input id="searchBar" type="text" />
-        <div id="buttonWrapper">
+        <div class="buttonWrapper">
           <div id="queryBtn" data-role="button"><h2>Find Greenscore!</h2></div>
         </div>
       </div>
@@ -103,7 +103,9 @@
           <input id="username" name="username" type="text" />
           <label for="password"></label>
           <input id="password" name="password" type="password" />
-          <input id="login_button" data-role="button" type="button" value="login" />
+          <div class="buttonWrapper">
+            <input id="login_button" data-role="button" value="login" />
+          </div>
         </form>
         <a id="fb_button" href="#">Login with Facebook</a>
         <form id="register">
@@ -117,7 +119,9 @@
           <input id="new_email" name="email" type="text" />
           <label for="address"></label>
           <input id="new_address" name="address" type="text" />
-          <input id="register_button" data-role="button" type="button" value="Register" />
+          <div class="buttonWrapper">
+            <input id="register_button" data-role="button" value="Register" />
+          </div>
         </form>
       </div>
       <div data-role="footer"></div>
