better login look

--- a/app/index.html
+++ b/app/index.html
@@ -107,7 +107,10 @@
             <input id="login_button" data-role="button" value="login" />
           </div>
         </form>
-        <a id="fb_button" href="#">Login with Facebook</a>
+        <div id="or_spacer">or</div>
+        <a id="fb_button" href="#"><img src="../assets/facebook-signin-button.png"></img></a>
+        <hr id="login_page_separator" />
+        <div id="account_create_label">Create an account</div>
         <form id="register">
           <label for="username"></label>
           <input id="new_username" name="username" type="text" />
