--- a/app/index.html
+++ b/app/index.html
@@ -18,6 +18,8 @@
       <!-- Mobile Styling -->
       <link href="./css/mobile.css" rel="stylesheet"/>
 
+    <!-- fonts -->
+    <link href='http://fonts.googleapis.com/css?family=Playfair+Display+SC' rel='stylesheet' type='text/css'>
 
     <!-- favicon -->
     <link rel="shortcut icon" href="./assets/greenscore.ico">
@@ -80,7 +82,7 @@
         <label for="searchBar"></label>
         <input id="searchBar" type="text" />
         <div class="buttonWrapper">
-          <div id="queryBtn" data-role="button"><h2>Find Greenscore!</h2></div>
+          <div id="queryBtn" data-role="button" class="bordered"><h2>Find Greenscore!</h2></div>
         </div>
       </div>
       <div data-role="footer"></div>
@@ -104,7 +106,7 @@
           <label for="password"></label>
           <input id="password" name="password" type="password" />
           <div class="buttonWrapper">
-            <input id="login_button" data-role="button" value="login" />
+            <input id="login_button" data-role="button" class="bordered" value="login" />
           </div>
         </form>
         <div id="or_spacer">or</div>
@@ -123,7 +125,7 @@
           <label for="address"></label>
           <input id="new_address" name="address" type="text" />
           <div class="buttonWrapper">
-            <input id="register_button" data-role="button" value="Register" />
+            <input id="register_button" data-role="button" class="bordered" value="Register" />
           </div>
         </form>
       </div>
@@ -164,19 +166,15 @@
         </div>
       </div>
       <div data-role="content" class="contentBubble">
-        <a href="#editProfilePage">Edit Profile</a>
-        <h1 id="welcomeMessage">Hi there!</h1>
-        <p>This page contains information about you and your current
-        residence.</p>
-        <p>You can change this info to your heart's content by clicking the
-        "edit profile" button!</p>
-        <br>
+        <a href="#editProfilePage" id="edit_button" class="bordered">Edit Profile</a>
+        <h1 id="welcomeMessageWelcome">Welcome <span id="welcomeMessage"></span></h1>
+        <hr />
         <!--<p>Why do we ask for your information? By gathering information about
         your environmental practices, we can more accurately calculate your
         greenscore. This will give other people a better idea of how
         environmentally friendly your home is. We'll also tell you how your
         habits measure up to those of your neighbors!</p>-->
-        <h2>Your info:</h2>
+        <h2 id="info_label">Your info</h2>
         <p id="profileName">Name: Nick LaGrow</p>
         <p id="profileUsername">Username: nickthegreat</p>
         <p id="profileEmail">Email: nick@foo.com</p>
