added media queries

--- a/app/index.html
+++ b/app/index.html
@@ -79,9 +79,8 @@
         <h1>Green<span>score</span></h1>
         <label for="searchBar"></label>
         <input id="searchBar" type="text" />
-        <div class="buttonWrapper">
-          <div id="queryBtn" data-role="button"><h2>Find Greenscore!</h2></div>
-        </div>
+        <div id="queryBtn"><h2>Find Greenscore!</h2></div>
+     
       </div>
       <div data-role="footer"></div>
     </div>
