Fix logout button

--- a/app/index.html
+++ b/app/index.html
@@ -169,7 +169,7 @@
       </div>
       <div data-role="content" class="contentBubble">
         <a href="#editProfilePage" id="edit_button" class="bordered">Edit Profile</a>
-        <div id="logout_button" class="bordered">Log Out</div>
+        <div id="logout_button" rel="external" class="bordered">Log Out</div>
         <h1 id="welcomeMessageWelcome">Welcome <span id="welcomeMessage"></span></h1>
         <hr />
         <!--<p>Why do we ask for your information? By gathering information about
