--- a/app/index.html
+++ b/app/index.html
@@ -51,8 +51,8 @@
     <script src="./scripts/lib/sha256.js" type="text/javascript"></script>
 
     <!-- socket.io -->
-    <!--<script src="http://kettle.ubiq.cs.cmu.edu:3000/socket.io/socket.io.js" type="text/javascript"></script>-->
-    <script id="socket" src="http://localhost:3000/socket.io/socket.io.js" type="text/javascript"></script>
+    <script src="http://kettle.ubiq.cs.cmu.edu:3000/socket.io/socket.io.js" type="text/javascript"></script>
+    <!--<script id="socket" src="http://localhost:3000/socket.io/socket.io.js" type="text/javascript"></script>-->
 
     <!-- MVC scripts -->
     <!-- models -->
@@ -108,7 +108,7 @@
           <label for="password"></label>
           <input id="password" name="password" type="password" />
           <div class="buttonWrapper" id="login_button">
-            <input id="login_button_internal" data-role="button" class="bordered" value="login" />
+            <div id="login_button_internal" data-role="button" class="bordered">Login</div>
           </div>
         </form>
         <div id="or_spacer">or</div>
@@ -127,7 +127,7 @@
           <label for="address"></label>
           <input id="new_address" name="address" type="text" />
           <div class="buttonWrapper">
-            <input id="register_button" data-role="button" class="bordered" value="Register" />
+            <div id="register_button" data-role="button" class="bordered">Register</div>
           </div>
         </form>
       </div>
@@ -246,8 +246,7 @@
           <br>
 
           <div class="button_wrapper">
-            <input id="puf_button" data-role="button"
-            value="Update" />
+            <div id="puf_button" data-role="button">Update</div>
           </div>
         </form>
       </div>
